# moose-dj-uv

./: README.md  hello.py  manage.py  pyproject.toml
.github/workflows/: ci.yaml
moose_dj/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
moose_dj/news/: apps.py  celery_tasks.py  models.py  views.py  views_celery.py  views_dask.py  views_huey.py
moose_dj/news/migrations/: 0001_initial.py
moose_dj/news/tests/: conftest.py  test_models.py  test_views.py  test_views_celery.py  test_views_dask.py
