[project]
name = "moose-dj-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "celery>=5.4.0",
    "django>=4.2,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "moose_dj.settings"
# addopts = "--cov --nomigrations --reuse-db"
norecursedirs = ".git* frontend requirements templates"
python_files = "test_*.py"
